--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,13 @@
 <head>
+  <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width initial-scale=1">
-
-  <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}">
+  <link rel="shortcut icon" href="{{ "/img/favicon.jpg" | prepend: site.baseurl }}" type="image/png">
+  <link rel="apple-touch-icon" href="{{ "/img/favicon.jpg" | prepend: site.baseurl }}" type="image/png">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
