--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,14 @@
   <meta name="viewport" content="width=device-width initial-scale=1">
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}">
+
   <link rel="shortcut icon" href="{{ "/img/favicon.jpg" | prepend: site.baseurl }}" type="image/png">
   <link rel="apple-touch-icon" href="{{ "/img/favicon.jpg" | prepend: site.baseurl }}" type="image/png">
-
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="javascript/bootstrap.min.js"></script>
   <!-- TODO:: Add Google stuff -->
 </head>
