--- a/css/main.scss
+++ b/css/main.scss
@@ -11,8 +11,40 @@ $small-font-size:  $base-font-size * 0.875;
 $base-color:       rgb(73, 187, 204);
 
 body {
-  border-top: 7px solid $base-color;
   background: #fafafa url("../img/cream.png") repeat
+}
+
+header {
+  width:100%;
+  height:100%;
+  color: #fff;
+  background:url('../img/family.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+  display:block;
+}
+
+header h1 {
+  margin-top:15%;
+  font-family: 'Shadows Into Light', cursive;
+}
+
+a.navbar-brand img {
+  height: 32px;
+}
+
+.inline-brand {
+  font-size: 20px;
+  color: black;
+  font-family: cursive;
+  display: inline-flex;
+}
+
+.inline-brand span {
+  margin: 4px 0 0 7px;
 }
 
 // Import partials from `sass_dir` (defaults to `_sass`)
