--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,40 @@
 <header>
-  <div class="wrapper">
-    <nav class="site-nav">
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{{ site.baseurl }}">
+          <div class="inline-brand" >
+            <img alt="DTK Solutions Engineer" src="{{ "/img/brand.png" | prepend: site.baseurl }}">
+            <span>Solutions Engineer</span>
+          </div>
+        </a>
       </div>
-    </nav>
+
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="nav navbar-nav navbar-right">
+          {% for page in site.pages %}
+            {% if page.title %}
+            <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+            {% endif %}
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <h1>
+        <p>We like leaving the office and <br/>knowing everything is OK. </p>
+        <p><br/>You should too.</p>
+      </h1>
+    </div>
   </div>
 </header>
