Add correct src location for bootstrap js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,6 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="javascript/bootstrap.min.js"></script>
+  <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
   <!-- TODO:: Add Google stuff -->
 </head>
