Fix up the header with the right message and the right height.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,8 +32,10 @@
   <div class="container">
     <div class="row">
       <h1>
-        <p>We like leaving the office and <br/>knowing everything is OK. </p>
-        <p><br/>You should too.</p>
+        <p>Life is all about the mixture of Family, Friends,
+          <br/>Experiences, and Solving Problems
+        </p>
+        <p><br/>Here is some of mine.</p>
       </h1>
     </div>
   </div>
