--- a/css/main.scss
+++ b/css/main.scss
@@ -10,26 +10,25 @@ $small-font-size:  $base-font-size * 0.875;
 
 $base-color:       rgb(73, 187, 204);
 
-body {
-  background: #fafafa url("../img/cream.png") repeat
+html, body {
+  background: #fafafa url("../img/cream.png") repeat;
+  height: 100%;
 }
 
 header {
-  width:100%;
-  height:100%;
-  color: #fff;
-  background:url('../img/family.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background-image: url('../img/family.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
   background-attachment: fixed;
-  display:block;
+  background-position-x: center;
+  background-position-y: 0px;
+  height: 100%;
 }
 
 header h1 {
-  margin-top:15%;
-  font-family: 'Shadows Into Light', cursive;
+  margin-top: 47%;
+  color: white;
+  font-family: serif;
 }
 
 a.navbar-brand img {
