--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,8 @@
 @charset "utf-8";
 
 // Our variables
+$grey-color:       #828282;
+
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
@@ -15,36 +17,7 @@ html, body {
   height: 100%;
 }
 
-header {
-  background-image: url('../img/family.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position-x: center;
-  background-position-y: 0px;
-  height: 100%;
-}
-
-header h1 {
-  margin-top: 47%;
-  color: white;
-  font-family: serif;
-}
-
-a.navbar-brand img {
-  height: 32px;
-}
-
-.inline-brand {
-  font-size: 20px;
-  color: black;
-  font-family: cursive;
-  display: inline-flex;
-}
-
-.inline-brand span {
-  margin: 4px 0 0 7px;
-}
-
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "bootstrap";
+@import "header";
+@import "footer";
