--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
         <p>Life is all about the mixture of Family, Friends,
           <br/>Experiences, and Solving Problems
         </p>
-        <p><br/>Here is some of mine.</p>
+        <p><br/>Here is a peek into my life.</p>
       </h1>
     </div>
   </div>
