--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,23 @@ html, body {
   height: 100%;
 }
 
+.background {
+  background-image: url('../img/family.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position-x: center;
+  background-position-y: 0px;
+  height: 100%;
+}
+
+.background h1 {
+  margin-top: 47%;
+  color: white;
+  font-family: serif;
+}
+
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "bootstrap";
 @import "header";
