--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,15 +1,16 @@
 footer {
   margin-bottom: 0px;
   text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-  color: #777;
+  color: $grey-color;
   padding-top: 15px;
   border-radius: 0px;
-}
 
-footer span.copyright {
-  margin-top: 13px;
-}
+  span.copyright {
+    margin-top: 13px;
+  }
 
-footer i.big {
-  font-size: 25px;
+  i.big {
+    font-size: 25px;
+    color: $grey-color;
+  }
 }
