--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,14 +1,17 @@
-header a.navbar-brand img {
-  height: 32px;
+header {
+  a.navbar-brand img {
+    height: 32px;
+  }
+
+  div.inline-brand {
+    font-size: 20px;
+    color: black;
+    font-family: cursive;
+    display: inline-flex;
+  }
+
+ div.inline-brand span {
+    margin: 4px 0 0 7px;
+  }
 }
 
-header div.inline-brand {
-  font-size: 20px;
-  color: black;
-  font-family: cursive;
-  display: inline-flex;
-}
-
-header div.inline-brand span {
-  margin: 4px 0 0 7px;
-}
