--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $small-font-size:  $base-font-size * 0.875;
 $base-color:       rgb(73, 187, 204);
 
 html, body {
-  background: #fafafa url("../img/cream.png") repeat;
+  background: url("../img/cream.png") repeat;
   height: 100%;
 }
 
@@ -25,14 +25,13 @@ html, body {
   background-position-x: center;
   background-position-y: 0px;
   height: 100%;
-}
 
-.background h1 {
-  margin-top: 47%;
-  color: white;
-  font-family: serif;
+  h1 {
+    margin-top: 47%;
+    color: white;
+    font-family: serif;
+  }
 }
-
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "bootstrap";
