--- a/_includes/background.html
+++ b/_includes/background.html
@@ -1,4 +1,4 @@
-<div class="container-fluid background">
+<div class="container-fluid background" data-sr="wait 2.5s and then ease-in-out 100px">
   <div class="container">
     <div class="row">
       <h1>
