--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,7 @@
   <!-- Javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/js/scrollReveal.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
   <!-- TODO:: Add Google stuff -->
 </head>
