Fix up header with border

--- a/_includes/background.html
+++ b/_includes/background.html
@@ -10,3 +10,9 @@
     </div>
   </div>
 </div>
+
+<div class="container-fluid background-bottom">
+  <div class="background-border">
+    &nbsp;
+  </div>
+</div>
