--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 @charset "utf-8";
 
 // Our variables
-$base-color: rgb(73, 187, 204);
+$base-color: #49bbcc;
 $grey-color: #828282;
 
 $base-background: url("../img/cream.png") repeat;
