--- a/_sass/_background.scss
+++ b/_sass/_background.scss
@@ -5,7 +5,7 @@
   background-attachment: scroll;
   background-position-x: center;
   background-position-y: 0px;
-  height: 100%;
+  height: 98%;
   opacity:1;
   transition: opacity 0.5s ease-out;
 
@@ -14,6 +14,18 @@
     color: white;
     font-family: serif;
   }
+}
+
+.background-border {
+  margin-top: 35px;
+  width: 100%;
+  height: 6px;
+  background-image: url("../img/stripe.png");
+  background-repeat: repeat-x;
+}
+
+.background-bottom {
+  background-color: $base-color;
 }
 
 .fade {
