--- a/_sass/_background.scss
+++ b/_sass/_background.scss
@@ -16,16 +16,18 @@
   }
 }
 
-.background-border {
-  margin-top: 35px;
-  width: 100%;
-  height: 6px;
-  background-image: url("../img/stripe.png");
-  background-repeat: repeat-x;
-}
-
 .background-bottom {
   background-color: $base-color;
+
+  .background-border {
+    margin-top: 35px;
+    width: 100%;
+    height: 6px;
+    background-image: url("../img/stripe.png");
+    background-repeat: repeat-x;
+    opacity:1;
+    transition: opacity 0.5s ease-out;
+  }
 }
 
 .fade {
