Fix syntax error

--- a/_includes/background.html
+++ b/_includes/background.html
@@ -1,5 +1,5 @@
 <div class="container-fluid background"
-  style="background-image: url('../img/{{ page.background }}');"
+  style="background-image: url('../img/{{ page.background }}')"
   data-sr="wait 0.2s and then ease-in-out 100px">
   <div class="container">
     <div class="row">
