Fix index pages background image

--- a/_sass/_background.scss
+++ b/_sass/_background.scss
@@ -1,4 +1,5 @@
 .background {
+  background-image: url('../img/family.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: scroll;
