Cleanup some unneeded stuff

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -2,7 +2,6 @@ footer {
   margin-bottom: 0px;
   text-shadow: 0 -1px 0 rgba(0,0,0,.25);
   color: $grey-color;
-  padding-top: 15px;
   border-radius: 0px;
 
   span.copyright {
@@ -12,5 +11,9 @@ footer {
   i.big {
     font-size: 25px;
     color: $grey-color;
+  }
+
+  .container {
+    border-top: thin solid $base-color;
   }
 }
