Make the margin on contact page better for mobile view

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,8 +9,8 @@
 
     {% include background.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div class="content">
+      <div class="row">
         {{ content }}
       </div>
     </div>
