--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,7 @@
 
     {% include background.html %}
 
-    <div class="content">
+    <div class="container">
       <div class="row">
         {{ content }}
       </div>
