--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,8 +1,9 @@
 footer {
-  margin-bottom: 0px;
   text-shadow: 0 -1px 0 rgba(0,0,0,.25);
   color: $grey-color;
   border-radius: 0px;
+  margin-top: 15px;
+  margin-bottom: 0px;
 
   span.copyright {
     margin-top: 13px;
