--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
     <div class="container">
       <span class="col-xs-12 col-md-4 copyright"> &copy; 2014 Dustin Kocher</span>
       <ul class="nav navbar-nav navbar-right col-xs-12 col-md-offset-6 col-md-2">
-        <li><a href="https://github.com/{{ site.github_username }}"><i class="fa fa-github big"></i></a></li>
-        <li><a href="https://twitter.com/{{ site.twitter_username }}"><i class="fa fa-twitter big"></i></a></li>
-        <li><a href="https://linkedin.com/in/{{ site.linkedin_username }}"><i class="fa fa-linkedin big"></i></a></li>
+        <li><a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fa fa-github big"></i></a></li>
+        <li><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fa fa-twitter big"></i></a></li>
+        <li><a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank"><i class="fa fa-linkedin big"></i></a></li>
       </ul>
     </div>
   </nav>
