Fix contact form button color;

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -45,6 +45,7 @@ $diameter: 350px;
     input[type=submit] {
       width: 70px;
       float: right;
+      background-color: $base-color;
     }
   }
 }
