--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,9 @@
   <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="{{ "/img/favicon.jpg" | prepend: site.baseurl }}" type="image/png">
-  <link rel="apple-touch-icon" href="{{ "/img/favicon.jpg" | prepend: site.baseurl }}" type="image/png">
+  <link rel="shortcut icon" href="{{ "/img/favicon.ico" | prepend: site.baseurl }}" type="image/x-con">
+  <link rel="apple-touch-icon" href="{{ "/img/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
+  <link rel="icon" href="{{ "/img/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
