Fix some style issues

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -14,7 +14,7 @@ $diameter: 350px;
     border-radius: $diameter/2;
 
     .title {
-      margin-top: $diameter/5;
+      padding-top: $diameter/4;
       margin-bottom: 15px;
       font-family: cursive;
 
