--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="{{ "" | prepend: site.baseurl }}">About</a></li>
+          <li><a href="{{ "/" | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ "/portfolio" | prepend: site.baseurl }}">Portfolio</a></li>
           <li><a href="{{ "/contact" | prepend: site.baseurl }}">Contact</a></li>
         </ul>
