Abstract some content into a partial.

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,9 +5,9 @@
 
   <body>
 
-    {% include header.html %}
+    {% include navigation.html %}
 
-    {% include background.html %}
+    {% include background_title.html %}
 
     <div class="container content">
       <div class="row">
