Break out background, title, pagination into own files.

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
   <body>
-
     {% include navigation.html %}
-
-    {% include background_title.html %}
+    {% include background.html %}
+    {% include title.html %}
 
     <div class="container content">
       <div class="row">
         {{ content }}
       </div>
     </div>
-
     {% include footer.html %}
-
   </body>
-
 </html>
