fix background images.

--- a/_includes/background.html
+++ b/_includes/background.html
@@ -1,6 +1,6 @@
 <div class="container-fluid background"
   data-sr="wait 0.2s and then ease-in-out 100px"
-  style="{% if page.background %} background-image: url('../img/{{ page.background }}'); {% endif %}">
+  style="{% if page.background %} background-image: url('/img/{{ page.background }}'); {% endif %}">
   <div class="container">
     <div class="row">
       <h1 style="
