--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 $base-color: #49bbcc;
 $grey-color: #828282;
 
-$base-background: url("../img/cream.png") repeat;
+$base-background: url("/img/cream.png") repeat;
 
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size: 19px;
