--- a/_sass/_background.scss
+++ b/_sass/_background.scss
@@ -1,5 +1,5 @@
 .background {
-  background-image: url('../img/family.jpg');
+  background-image: url('/img/family.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -24,7 +24,7 @@
     margin-top: 35px;
     width: 100%;
     height: 6px;
-    background-image: url("../img/stripe.png");
+    background-image: url("/img/stripe.png");
     background-repeat: repeat-x;
     opacity:1;
     transition: opacity 0.5s ease-out;
