Add resume template and call right css.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 
   <!-- Stylesheets -->
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/" | append: page.layout | append: '.css' | prepend: site.baseurl }}">
 
   <!-- Javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
