--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -221,6 +221,11 @@ td {
 article {
 	@extend %extend_1;
 	display: block;
+  h3 {
+    font-weight: bold;
+    margin-top: 15px;
+    margin-bottom: 5px;
+  }
 }
 aside {
 	@extend %extend_1;
