--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,6 +21,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="{{ "/" | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ "/portfolio" | prepend: site.baseurl }}">Portfolio</a></li>
+          <li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
           <li><a href="{{ "/contact" | prepend: site.baseurl }}">Contact</a></li>
         </ul>
       </div>
