--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,9 @@
 
     <div class="container content">
       <div class="row">
-        {{ content }}
+        <div class="col-md-11">
+          {{ content }}
+        </div>
       </div>
     </div>
     {% include footer.html %}
